--- a/player.html
+++ b/player.html
@@ -1,4 +1,3 @@
-<!-- player.html - Player -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -7,17 +6,8 @@
     <title>Player YouTube</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { 
-            background: #000;
-            width: 1920px;
-            height: 1080px;
-            overflow: hidden;
-        }
-        #player {
-            width: 1920px;
-            height: 1080px;
-            pointer-events: none;
-        }
+        body { background: #000; width: 100%; height: 100vh; overflow: hidden; }
+        #player { width: 100%; height: 100vh; pointer-events: none; }
     </style>
 </head>
 <body>
@@ -28,19 +18,16 @@
         let playlist = [];
         let currentIndex = 0;
 
-        // Carrega a API do YouTube
         const tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
         document.head.appendChild(tag);
 
-        // Inicializa o player quando a API estiver pronta
         function onYouTubeIframeAPIReady() {
-            // Pega a playlist da URL
             const urlParams = new URLSearchParams(window.location.search);
             const playlistData = urlParams.get('playlist');
             
             if (playlistData) {
-                playlist = JSON.parse(decodeURIComponent(playlistData));
+                playlist = JSON.parse(decodeURIComponent(playlistData)).map(video => video.id);
                 if (playlist.length > 0) {
                     createPlayer();
                 }
@@ -49,8 +36,8 @@
 
         function createPlayer() {
             player = new YT.Player('player', {
-                width: '1920',
-                height: '1080',
+                width: '100%',
+                height: '100%',
                 videoId: playlist[0],
                 playerVars: {
                     autoplay: 1,
