--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
         body { font-family: Arial, sans-serif; padding: 20px; max-width: 800px; margin: 0 auto; }
         .container { background: #f9f9f9; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         .input-group { margin-bottom: 20px; }
-        input[type="text"], input[type="password"] { width: 100%; padding: 8px; margin: 5px 0; border: 1px solid #ddd; border-radius: 4px; }
+        input[type="text"], input[type="password"], textarea {
+            width: 100%;
+            padding: 8px;
+            margin: 5px 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
         button { padding: 8px 16px; background: #2196F3; color: white; border: none; border-radius: 4px; cursor: pointer; margin: 5px; }
         button:hover { background: #1976D2; }
         .video-list { margin: 20px 0; }
-        .video-item { display: flex; align-items: center; padding: 10px; background: white; margin: 5px 0; border: 1px solid #eee; border-radius: 4px; cursor: move; }
-        .video-item.dragging { opacity: 0.5; background: #e0e0e0; }
-        .video-title { flex: 1; margin-right: 10px; display: flex; align-items: center; }
-        .video-title::before { content: "☰"; margin-right: 10px; color: #999; }
-        .player-url { width: 100%; padding: 10px; background: #eee; border: 1px solid #ddd; border-radius: 4px; margin-top: 20px; word-break: break-all; }
-        .drag-handle { cursor: move; padding: 0 10px; color: #999; }
-        .video-item.drag-over { border: 2px dashed #2196F3; }
+        .video-item { display: flex; flex-direction: column; padding: 10px; background: white; margin: 5px 0; border: 1px solid #eee; border-radius: 4px; }
+        .video-title { font-weight: bold; margin-bottom: 5px; }
+        .video-description { margin-bottom: 10px; }
+        .edit-description { margin-top: 10px; display: none; }
+        .edit-description textarea { width: 100%; height: 60px; margin-bottom: 5px; }
     </style>
 </head>
 <body>
@@ -39,6 +43,7 @@
             <h2>Gerenciar Playlist</h2>
             <div class="input-group">
                 <input type="text" id="videoUrl" placeholder="Cole a URL do vídeo do YouTube aqui">
+                <input type="text" id="videoDescription" placeholder="Digite a descrição do vídeo aqui">
                 <button onclick="addVideo()">Adicionar Vídeo</button>
             </div>
             <div id="videoList" class="video-list"></div>
@@ -51,7 +56,6 @@
     <script>
         let playlist = [];
         const LOGIN = { user: 'admin', pass: 'admin123' };
-        let draggedItem = null;
 
         // Funções de Login/Logout
         function login() {
@@ -84,12 +88,14 @@
 
         function addVideo() {
             const url = document.getElementById('videoUrl').value;
+            const description = document.getElementById('videoDescription').value;
             const videoId = extractVideoId(url);
             if (videoId) {
-                playlist.push({ id: videoId, title: `Vídeo ${playlist.length + 1}` }); // Define título padrão
+                playlist.push({ id: videoId, description: description || `Vídeo ${playlist.length + 1}` });
                 savePlaylist();
                 updatePlaylistDisplay();
                 document.getElementById('videoUrl').value = '';
+                document.getElementById('videoDescription').value = '';
             } else {
                 alert('URL inválida!');
             }
@@ -112,47 +118,31 @@
             playlist.forEach((video, index) => {
                 const item = document.createElement('div');
                 item.className = 'video-item';
-                item.draggable = true;
                 item.innerHTML = `
-                    <span class="video-title">${video.title} - ${video.id}</span>
+                    <div class="video-title">ID: ${video.id}</div>
+                    <div class="video-description">Descrição: <span id="description-${index}">${video.description}</span></div>
+                    <button onclick="toggleEditDescription(${index})">Editar Descrição</button>
                     <button onclick="removeVideo(${index})">Remover</button>
+                    <div class="edit-description" id="edit-description-${index}">
+                        <textarea id="edit-description-text-${index}">${video.description}</textarea>
+                        <button onclick="saveDescription(${index})">Salvar</button>
+                        <button onclick="toggleEditDescription(${index})">Cancelar</button>
+                    </div>
                 `;
-
-                // Eventos de drag and drop
-                item.addEventListener('dragstart', () => {
-                    draggedItem = index;
-                    item.classList.add('dragging');
-                });
-
-                item.addEventListener('dragend', () => {
-                    item.classList.remove('dragging');
-                });
-
-                item.addEventListener('dragover', (e) => {
-                    e.preventDefault();
-                    item.classList.add('drag-over');
-                });
-
-                item.addEventListener('dragleave', () => {
-                    item.classList.remove('drag-over');
-                });
-
-                item.addEventListener('drop', (e) => {
-                    e.preventDefault();
-                    item.classList.remove('drag-over');
-                    const draggedOverIndex = index;
-                    
-                    if (draggedItem !== draggedOverIndex) {
-                        const itemToMove = playlist[draggedItem];
-                        playlist.splice(draggedItem, 1);
-                        playlist.splice(draggedOverIndex, 0, itemToMove);
-                        savePlaylist();
-                        updatePlaylistDisplay();
-                    }
-                });
-
                 listElement.appendChild(item);
             });
+        }
+
+        function toggleEditDescription(index) {
+            const editDiv = document.getElementById(`edit-description-${index}`);
+            editDiv.style.display = editDiv.style.display === 'none' ? 'block' : 'none';
+        }
+
+        function saveDescription(index) {
+            const newDescription = document.getElementById(`edit-description-text-${index}`).value;
+            playlist[index].description = newDescription;
+            savePlaylist();
+            updatePlaylistDisplay();
         }
 
         function extractVideoId(url) {
